--- a/Python Backend/requirements.txt
+++ b/Python Backend/requirements.txt
@@ -1,6 +1,7 @@
-Flask==3.0.0
-Flask-Cors==4.0.0
+fastapi==0.110.0
+uvicorn==0.28.0
+requests==2.31.0
+python-dotenv==1.0.1
+pydantic==2.6.4
 pandas==2.1.3
 numpy==1.26.2
-gunicorn==21.2.0
-requests==2.31.0
