Fix top-level await usage

--- a/.env
+++ b/.env
@@ -1,5 +1,1 @@
-SMTP_SERVER=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USERNAME=your-gmail@gmail.com  # Replace with your Gmail
-SMTP_PASSWORD=your-app-password     # Replace with your App Password
-SENDER_EMAIL=your-gmail@gmail.com   # Replace with your Gmail
+REACT_APP_API_URL=https://medstartjaan.onrender.com
